--- a/DEMO_APP/static/datasets/.gitignore
+++ b/DEMO_APP/static/datasets/.gitignore
@@ -3,7 +3,14 @@
 
 # Except .gitignore file
 !.gitignore
+
 ! .\paris\binary\ResNet50
 ! .\paris\binary\ResNet50\*
+! .\paris\binary\MobileNetV2
+! .\paris\binary\MobileNetV2\*
+
+
 ! .\oxbuild\binary\ResNet50
 ! .\oxbuild\binary\ResNet50\*
+! .\oxbuild\binary\MobileNetV2
+! .\oxbuild\binary\MobileNetV2\*
