--- a/DEMO_APP/static/datasets/.gitignore
+++ b/DEMO_APP/static/datasets/.gitignore
@@ -4,5 +4,7 @@
 # Except .gitignore file
 !.gitignore
 
-! paris\binary
-! oxbuild\binary
+!paris\binary\MobileNetV2
+!paris\binary\ResNet50
+!oxbuild\binary\MobileNetV2
+!oxbuild\binary\ResNet50
